--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#F39407</color>
     <color name="grey">#151414</color>
+    <color name="veolet">#EF2821</color>
+    <color name="seriy">#4E4C4E</color>
+    <color name="red">#E60C0C</color>
+
 
 </resources>
